cmake_minimum_required(VERSION 3.10)

project(Learn-LLVM-17)

option(BUILD_ALL "Enable build all feature" ON)

# UNCOMMENT ONE LINE ONCE!!!
#
# add_subdirectory(Chapter02/calc)
# add_subdirectory(Chapter03/tinylang)
# add_subdirectory(Chapter04/tinylang)
# add_subdirectory(Chapter05/tinylang)
# add_subdirectory(Chapter06/calc)
# add_subdirectory(Chapter06/tinylang)
# add_subdirectory(Chapter07/tinylang)
# add_subdirectory(Chapter07/tinylang2)
# add_subdirectory(Chapter08/TableGen)
# add_subdirectory(Chapter09/jit)
# add_subdirectory(Chapter09/lljit)
# add_subdirectory(Chapter10/clang-plugin)
# add_subdirectory(Chapter10/clang-plugin2)
# add_subdirectory(Chapter10/iconvchecker)
